[tool.poetry]
name = "simple_mathlib"
version = "0.1.0"
description = "An amazing, and really simple to use Python maths library, to solve equations, questions and more."
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
taskipy = "^1.9.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
flake8 = "^4.0.1"
flake8-bugbear = "^21.9.2"
flake8-import-order = "^0.18.1"
flake8-annotations = "^2.7.0"
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
precommit = "pre-commit install"
lint = "pre-commit run --all-files"
